# angry-purple-tiger-rs

./: CONTRIBUTING.md  Cargo.toml  README.md  release.toml
.github/workflows/: rust.yml
src/: bin.rs  lib.rs  words.rs
