[package]
name = "angry-purple-tiger"
version = "0.1.1-dev"
license = "Apache-2.0"
repository = "https://github.com/helium/angry-purple-tiger-rs"
readme = "README.md"
description = "animal-based hash digests for humans"
authors = ["Marc Nijdam <marc@helium.com>"]
edition = "2018"


[[bin]]
name = "angry_purple_tiger"
path = "src/bin.rs"

[dependencies]
md5 = "0"
clap = "2"

[dev-dependencies]
