[package]
name = "angry-purple-tiger"
version = "1.0.0"
license = "Apache-2.0"
repository = "https://github.com/helium/angry-purple-tiger-rs"
readme = "README.md"
description = "animal-based hash digests for humans"
authors = ["Marc Nijdam <marc@helium.com>"]
edition = "2021"

[features]
helium_crypto = ["helium-crypto"]

[[bin]]
name = "angry_purple_tiger"
path = "src/bin.rs"

[dependencies]
md5 = "0"
clap = {version = "4", features = ["derive"]}
anyhow = "1"
helium-crypto = {version = ">=0.6", optional = true}

[dev-dependencies]
